bootstrap/control-plane/workloads/keycloak/10-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: keycloak
  labels:
    app.kubernetes.io/part-of: devzero-idp
